--- a/style.css
+++ b/style.css
@@ -145,14 +145,14 @@ nav a:hover {
     font-family: 'Playfair Display', serif;
     text-transform: uppercase;
     letter-spacing: 1.5px;
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 0.9s ease-in-out;
 }
 
 .poster p {
     font-size: 1.7rem;
     font-weight: 300;
     letter-spacing: 1.2px;
-    animation: fadeIn 1.2s ease-in-out;
+    animation: fadeIn 0.7s ease-in-out;
 }
 
 /* Blog Section */
@@ -596,19 +596,20 @@ form button:hover {
 
 .privacy-policy h1 {
     font-size: 36px;
-    color: #32021F; /* Royal dark color */
+    color: var(--primary-color);
     margin-bottom: 20px;
 }
 
 .privacy-policy h2 {
     font-size: 28px;
-    color: #6F7D8C; /* Subtle royal color */
+    color: var(--primary-color);
     margin-top: 30px;
     margin-bottom: 15px;
 }
 
 .privacy-policy p {
     line-height: 1.6;
+    color: var(--secondary-color);
     margin-bottom: 20px;
 }
 
